# remote-controlled-tank-robot

./: README.md
ros_ws/: .gitignore
ros_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros_ws/src/bluetooth_controller_teleop/: CMakeLists.txt  package.xml
ros_ws/src/bluetooth_controller_teleop/CMakeModules/: FindBluetooth.cmake
ros_ws/src/bluetooth_controller_teleop/include/: BluetoothManager.hpp
ros_ws/src/bluetooth_controller_teleop/src/: main.cpp
ros_ws/src/bluetooth_controller_teleop/src/bluetooth/: BluetoothManager.cpp  CMakeLists.txt  bluetooth_test.cpp
ros_ws/src/core/: CMakeLists.txt  package.xml
ros_ws/src/core/include/: GameControllerTeleop.hpp
ros_ws/src/core/launch/: start_core.xml
ros_ws/src/core/src/: GameControllerTeleop.cpp  GameControllerTeleopNode.cpp  motor_control.py
ros_ws/src/joystick_controller/: CMakeLists.txt  package.xml
ros_ws/src/joystick_controller/config/: controller.yaml
ros_ws/src/joystick_controller/include/joystick_controller/: JoystickInputHandler.hpp  JoystickInputPublisher.hpp
ros_ws/src/joystick_controller/launch/: run.launch
ros_ws/src/joystick_controller/src/: JoystickInputHandler.cpp  JoystickInputPublisher.cpp  joystick_controller_node.cpp  js_test.cpp
ros_ws/src/joystick_msgs/: CMakeLists.txt  package.xml
ros_ws/src/joystick_msgs/msg/: JoystickInputMsg.msg
setup/: setup.sh
