<?xml version="1.0"?>
<package format="2">
  <name>joystick_controller</name>
  <version>0.0.1</version>
  <description>The joystick_controller package</description>

  <maintainer email="asad.ahmed.de@gmail.com">Asad Ahmed</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>joystick_msgs</build_depend>
  <exec_depend>joystick_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
